# premio

./: .dockerignore  .editorconfig  .env  .eslintrc.cjs  .eslintrc.js  .eslintrc.json  .gitignore  .parcelrc  .prettierrc.json  .prettierrc.toml  .proxyrc.js  CODE_OF_CONDUCT.md  Cargo.toml  Dockerfile  README.md  apollo.config.js  app.webmanifest  async_bg.006d55fc.wasm  async_bg.32e9fdb0.wasm  async_bg.be75bbb2.wasm  babel.config.js  bitbucket-pipelines.yml  docusaurus.config.js  index.295bba07.js  index.295bba07.js.map  index.2cce7f53.js  index.2cce7f53.js.map  index.306883d0.js  index.306883d0.js.map  index.36d7dd7b.js  index.36d7dd7b.js.map  index.393dc0cc.css  index.393dc0cc.css.map  index.4748abaa.js  index.4748abaa.js.map  index.a48a2834.js  index.a48a2834.js.map  index.be959409.css  index.be959409.css.map  index.ec7b0fa7.js  (+63 more)
.cargo/: config.toml
.github/: CODEOWNERS
.github/workflows/: deploy.yml
app-src/: extern.ts  main.module.scss  main.tsx  reset.scss  styles.scss  worker.ts
app-src/components/: Menu.tsx  NumberField.tsx  Tag.tsx
app-src/components/styles/: Menu.module.scss  Tag.module.scss
app-src/pages/: Basic.tsx  Failures.tsx  Worker.tsx
app-src/pages/styles/: default.module.scss
assets/: Components.05316416.js  Components.14306134.js  Components.18a4db60.js  Components.269fc4e6.js  Components.4ef98a6a.js  Components.52140fa7.js  Components.65e5a80b.js  Components.7190d4ee.js  Components.85c44644.js  Components.8aecbe31.js  Components.990473dd.js  Components.9c63ee0c.js  Components.a142ef49.js  Components.a319fbbb.js  Components.d1556948.js  async_bg.3a83a125.wasm  async_bg.70d15e7c.wasm  async_bg.79a00f24.wasm  async_bg.b0507f61.wasm  index.02bc07af.js  index.09e1d49d.js  index.0b970deb.js  index.1176a5db.js  index.11b50015.js  index.1a147f81.js  index.1c226e00.js  index.27328041.js  index.311ab732.js  index.3527c3a1.js  index.3e668a3b.js  index.48c6a40a.js  index.4944f9e4.js  index.4dd6302e.js  index.50e6eabe.js  index.558520bb.js  index.6fb2fac6.js  index.7601a3e3.js  index.7b040e71.js  index.832b8dc2.js  index.88872b72.js  (+43 more)
crates/async/: Cargo.toml
crates/async/src/: lib.rs
crates/cli/: Cargo.toml
crates/cli/src/: main.rs
crates/desktop/: tauri.conf.json
crates/desktop/src/: main.rs
crates/prisma-cli/: Cargo.toml
crates/server/: Cargo.toml  README.md
crates/server/src/: lib.rs  lib.rs.bak  main.rs  prisma.rs
crates/server/src/gqlite/: mod.rs  schema.rs  sql.rs  types.rs  utils.rs
crates/server/src/gqlite/query/: boardgame.rs  mod.rs  user.rs
crates/server/src/graphql/: mod.rs  schema.rs  types.rs
crates/server/src/graphql/query/: mod.rs  user.rs
crates/sum/: Cargo.toml
crates/sum/src/: lib.rs  main.rs
crates/wasm/: Cargo.toml
crates/wasm/src/: lib.rs
crates/wasm_async/: Cargo.toml  justfile
crates/wasm_async/src/: lib.rs
crates/wasm_sum/: Cargo.toml
crates/wasm_threads/: Cargo.toml  justfile
crates/wasm_threads/src/: lib.rs
crates_next/prisma-cli/: Cargo.toml
docs/: index.mdx
migrations/: 20220405174448_boardgames.sql  20220609063120_users.sql
migrations/20220903181651_create_user/: migration.sql
public/: 404.html  app.webmanifest  service_worker.js  sw-strategies.js
src/: lib.rs
src-app/: _vars.scss  env.d.ts  extern.ts  main.tsx
src-app/components/: Menu.tsx  Tooltip.tsx
src-app/components/styles/: Menu.module.scss  Tooltip.module.scss
src-app/hooks/: useDatGui.ts  useTooltip.ts
src-app/pages/: Basic.tsx  Failures.tsx
src-app/stores/: gui.ts
src-tauri/: tauri.conf.json
