[workspace]
members = ["crates/*"]

[profile.release]
# Link time optimization using using whole-program analysis.
# It will make the .wasm smaller, but it will also make it faster at runtime!
lto = true
# Tell `rustc` to optimize for small code size.
opt-level = "s"
# This causes debuginfo to be stripped from release binaries.
strip = "debuginfo"
