[workspace]
members = ["crates/*"]
resolver = "2"

[profile.release]
# Link-Time Optimization using whole-program analysis.
# It will make the app smaller, but it will also make it faster at runtime!
lto = "fat"
# Tell `rustc` to optimize for small code size. Interesting for Wasm.
opt-level = "s"
# This causes debuginfo to be stripped from release binaries.
strip = "debuginfo"

codegen-units = 1
panic = "abort"
