[package]
name = "server"
version = "0.1.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.5.7", features = ["http2", "ws"] }
hyper = { version = "0.14.19", features = ["full"] }
tokio = { version = "1.19.2", features = ["full"] }
tower = "0.4.13"
tower-http = { version = "0.3.4", features = [
	"set-header",
	"cors",
	"fs",
	"trace",
] }
tracing = "0.1.35"
tracing-subscriber = { version = "0.3.11", features = ["env-filter"] }
