[package]
name = "server"
version = "0.1.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-graphql = "4.0.2"
async-graphql-axum = "4.0.4"
axum = { version = "0.5.11", features = ["http2", "ws"] }
clap = { version = "3.2.20", features = ["derive"] }
hyper = { version = "0.14.19", features = ["full"] }
#prisma-client-rust = { git = "https://github.com/Brendonovich/prisma-client-rust", tag = "0.6.1" }
rayon = "1.5.3"
regex = "1.6.0"
reqwest = { version = "0.11.11", features = ["json", "rustls"] }
roxmltree = "0.15.0"
serde = { version = "1.0.138", features = ["derive"] }
sqlx = { version = "0.6.1", features = ["runtime-tokio-rustls", "sqlite", "macros", ] }
tokio = { version = "1.24.2", features = ["full"] }
tower = "0.4.13"
tower-http = { version = "0.3.4", features = ["cors", "fs", "set-header", "trace", ] }
tracing = "0.1.35"
tracing-subscriber = { version = "0.3.14", features = ["env-filter"] }
