[package]
name = "wasm_async"
version = "0.1.0"
edition = "2021"
publish = false

[package.metadata.wasm-pack.profile.release]
# wasm-opt = false

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook", "wee_alloc", "console_log"]

[dependencies]
# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.7", optional = true }

# `wee_alloc` is a tiny allocator for wasm that is only ~1K in code size
# compared to the default allocator's ~10K. It is slower than the default
# allocator, however.
wee_alloc = { version = "0.4.5", optional = true }

# Wasm bindgen
wasm-bindgen = { version = "0.2.80", features = ["serde-serialize"] }
wasm-bindgen-futures = "0.4.30"

# JS and DOM APIs
js-sys = "0.3.57"
web-sys = "0.3.57"
gloo = "0.7.0"

# Log
log = "0.4.17"
console_log = { version = "0.2.0", features = ["color"], optional = true }

# Local crates
sum = { path = "../sum" }

# Other
reqwest = { version = "0.11.10", features = ["json"] }
serde = { version = "1.0.137", features = ["derive"] }
serde_derive = "1.0.137"
serde_json = "1.0.81"

[dev-dependencies]
wasm-bindgen-test = "0.3.30"
