[package]
name = "wasm_threads"
version = "0.1.0"
edition = "2021"
publish = false

[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.7", optional = true }

# Wasm bindgen
wasm-bindgen = "0.2.81"
wasm-bindgen-futures = "0.4.31"
wasm-bindgen-rayon = "1.0.3"

# Local crates
sum = { path = "../sum" }

[dev-dependencies]
wasm-bindgen-test = "0.3.31"
